# Shitsu

./: .example.env  Dockerfile  alembic.ini  docker-compose.yml  entripoint.sh  pyproject.toml
backend/: main.py  requirements.txt
backend/shitsu/app/: logger.py
backend/shitsu/app/db/: database.py
backend/shitsu/app/enum/: title_enum.py  user_enum.py
backend/shitsu/app/models/: association_tables.py  author.py  base_mode.py  chapter.py  comment.py  genre.py  publisher.py  tag.py  title.py  user.py
backend/shitsu/app/repository/: author_repo.py  base_repo.py  chapter_repo.py  publisher_repo.py  tag_genre_repo.py  title_repo.py  user_repo.py
backend/shitsu/app/schemas/: author.py  publisher.py  tag.py  title.py  user.py
backend/shitsu/app/sql_data/: genres.sql  tags.sql
backend/shitsu/app/templates/: reset_password.html
backend/shitsu/app/utils/: cache.py  decorators.py  email.py  letter.html  password.py  token.py
backend/shitsu/controller/: router.py
backend/shitsu/controller/routers/: author.py  genre.py  publisher.py  tag.py  title.py  user.py
backend/shitsu/core/: celery.py  config.py  email.py  redis.py
backend/shitsu/migration/: env.py
backend/shitsu/service/: author_service.py  publisher_service.py  tag_genre_service.py  title_service.py  user_service.py
backend/src/api/: router.py
backend/src/controller/: router.py
backend/src/core/: __init__.py  celery.py  config.py  redis.py
backend/src/migration/: env.py
backend/src/service/: author_service.py  publisher_service.py  tag_genre_service.py  title_service.py  user_service.py
(+49 files in other folders)
