[project]
name = "shitsu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.16.5",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "billiard==4.2.3",
    "black==25.9.0",
    "celery==5.5.3",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.118.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "kombu==5.5.4",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-slugify==8.0.4",
    "pytokens==0.1.10",
    "redis==5.2.1",
    "six==1.17.0",
    "slugify==0.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.48.0",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.37.0",
    "vine==5.1.0",
    "wcwidth==0.2.14",
]
